# nervmap

./: .coverage  .gitignore  .nervmap.yml.example  LICENSE  README.md  SPEC.md  nervmap-linux-amd64.spec  pyproject.toml
nervmap/: __init__.py  __main__.py  cli.py  config.py  models.py  scanner.py  utils.py
nervmap-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
nervmap-ui/src/: App.tsx  store.ts  styles.css  types.ts
nervmap-ui/src/graph/: styles.ts  transform.ts  transform3d.ts
nervmap-ui/src/panels/: EditorPanel.tsx  FileTreePanel.tsx  Graph3DPanel.tsx  GraphPanel.tsx
nervmap/ai/: __init__.py  chain_parser.py  collector.py  config_resolver.py  console.py  models.py  rules.py  signatures.py
nervmap/diagnostics/: __init__.py  engine.py
nervmap/diagnostics/rules/: __init__.py  code_rules.py  dependencies.py  docker_rules.py  network.py  resources.py  systemd_rules.py
nervmap/discovery/: __init__.py  docker.py  ports.py  process.py  systemd.py
nervmap/output/: __init__.py  console.py  hooks.py  json_out.py
nervmap/source/: __init__.py  cache.py  linker.py  locator.py  models.py
nervmap/source/parsers/: __init__.py  config_parser.py  js_parser.py  python_parser.py
nervmap/topology/: __init__.py  fingerprints.py  mapper.py
nervmap/web/: __init__.py  security.py  server.py
nervmap/web/static/: index.html
nervmap/web/static/assets/: codemirror-6ucSglMj.js  (+22 more)
tests/: test_ai.py  test_diagnostics.py  test_discovery.py  test_output.py  test_scope.py  test_source.py  test_topology.py  test_web.py
